@@ -1,6 +1,8 @@
 sunuo (0.4.3) unstable; urgency=low
 
   * make automatic world save interval configurable, patch by Maik Greubel
+  * documentation updates
+    - server-list configuration
 
  --
 
